Stop datatable sorting arrows wrapping onto next line when resized

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -98,6 +98,7 @@ a.dt-button {
         &.sorting::after {
             content: '\f0dc';
             color: color(text, light);
+            margin-right: -20px; // prevent arrows wrapping onto next line
         }
 
         &.sorting_asc::after {
